# open-ecu

./: .cproject  .gitignore  .mxproject  .project  AGENTS.md  CLAUDE.md  CMAKE_BUILD.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  LICENSE  README.md  STM32_INTEGRATION.md  build.sh  clean.sh  flash.sh  sixstep_driver Debug.launch  sixstep_driver.ioc
.sisyphus/: boulder.json
.sisyphus/evidence/: task-5-tim4-isr.txt  task-6-libecu-build.txt  task-7-baseline-size.txt  task-7-clean.txt  task-7-debug.txt  task-7-release.txt  task-7-size-delta.txt  task-7-size-release.txt
.sisyphus/notepads/hall-tim-migration/: learnings.md
.sisyphus/plans/: hall-tim-migration.md
.sisyphus/run-continuation/: ses_1a47c172cffeMGvBwQ3Fh2JaTp.json  ses_1a516e164ffe96UNbGfkFT7PGf.json
Core/Inc/: stm32g4xx_hal_conf.h
Core/Src/: main.cpp  stm32g4xx_hal_msp.c  stm32g4xx_it.c
STM32G431/: CMakeLists.txt  build.sh  clean.sh  flash.sh
STM32G431/Core/Inc/: main.h  stm32g4xx_hal_conf.h
STM32G431/Core/Src/: main.cpp  stm32g4xx_hal_msp.c  stm32g4xx_it.c  uart_at_bridge.hpp
STM32G431/Core/Startup/: startup_stm32g431cbux.s
STM32G431/Drivers/CMSIS/Device/ST/STM32G4xx/Include/: stm32g431xx.h  stm32g4xx.h
STM32G431/Drivers/STM32G4xx_HAL_Driver/Inc/: stm32g4xx_hal.h  stm32g4xx_hal_cortex.h  stm32g4xx_hal_def.h  stm32g4xx_hal_dma.h  stm32g4xx_hal_dma_ex.h  stm32g4xx_hal_exti.h  stm32g4xx_hal_flash.h  stm32g4xx_hal_flash_ex.h  stm32g4xx_hal_flash_ramfunc.h  stm32g4xx_hal_gpio.h  stm32g4xx_hal_gpio_ex.h  stm32g4xx_hal_pwr.h  stm32g4xx_hal_pwr_ex.h  stm32g4xx_hal_rcc.h  stm32g4xx_hal_rcc_ex.h  stm32g4xx_hal_uart.h  stm32g4xx_hal_uart_ex.h  stm32g4xx_ll_bus.h  stm32g4xx_ll_cortex.h  stm32g4xx_ll_crs.h  stm32g4xx_ll_dma.h  stm32g4xx_ll_dmamux.h  stm32g4xx_ll_exti.h  stm32g4xx_ll_gpio.h  stm32g4xx_ll_lpuart.h  stm32g4xx_ll_opamp.h  stm32g4xx_ll_pwr.h  stm32g4xx_ll_rcc.h  stm32g4xx_ll_system.h  stm32g4xx_ll_usart.h  stm32g4xx_ll_utils.h
STM32G431/Drivers/STM32G4xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
STM32G431/Drivers/STM32G4xx_HAL_Driver/Src/: stm32g4xx_hal.c  stm32g4xx_hal_cortex.c  stm32g4xx_hal_dma.c  stm32g4xx_hal_dma_ex.c  stm32g4xx_hal_exti.c  stm32g4xx_hal_flash.c  stm32g4xx_hal_flash_ex.c  stm32g4xx_hal_flash_ramfunc.c  stm32g4xx_hal_gpio.c  stm32g4xx_hal_opamp_ex.c  stm32g4xx_hal_pwr.c  stm32g4xx_hal_pwr_ex.c  stm32g4xx_hal_rcc.c  stm32g4xx_hal_rcc_ex.c  stm32g4xx_hal_uart.c  stm32g4xx_hal_uart_ex.c
cmake/: arm-none-eabi-gcc.cmake  stm32g4-config.cmake
demo/: demo_main.cpp
docs/: AT_COMMANDS.md  bemf_hybrid_algorithm.md  motor_pll_tuning.tex
libecu/: Makefile
libecu/hal/stm32g4/: stm32_adc.cpp  stm32_adc.hpp  stm32_hall_sensor.cpp  stm32_hall_sensor.hpp  stm32_pwm.cpp  stm32_pwm.hpp
libecu/include/: at_command_processor.hpp  bldc_controller.hpp  libecu.hpp
libecu/include/algorithms/: bemf_observer.hpp  commutation_controller.hpp  current_controller.hpp  motor_pll.hpp  pid_controller.hpp
libecu/include/hal/stm32g4/: stm32_hall_sensor.hpp  stm32_pwm.hpp
libecu/include/interfaces/: adc_interface.hpp  hall_interface.hpp  pwm_interface.hpp
libecu/include/platform/: crc16.hpp  critical_section.hpp
libecu/include/safety/: safety_monitor.hpp
libecu/src/: at_command_processor.cpp  bemf_observer.cpp  bldc_controller.cpp  commutation_controller.cpp  current_controller.cpp  motor_pll.cpp  pid_controller.cpp  safety_monitor.cpp
libecu/src/platform/: crc16.cpp
tests/: sim_3phase_current.py  sim_current.py
tests/test_motor_pll/: main.cpp  plot_results.py  run.sh
utility/: monitor.py
